# live_interview_agent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE.md.backup  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  test-api-key.html  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/rules/: architecture.md  implementation.md  planning.md  verification.md
.opencode/: PRISM.md  opencode.jsonc
.opencode/agent/: architect.md  cross-checker.md  developer.md  documenter.md  explorer.md  orchestrator.md  pm.md  reviewer.md  tester.md
.opencode/command/: prism-ci.md  prism-handoff.md  prism-implement.md  prism-init.md  prism-plan.md  prism-promote.md  prism-reflect.md  prism-solution.md  prism-todo.md  prism-upgrade.md  prism-verify.md  reflect-off.md  reflect-on.md
.opencode/plugin/: prism-hooks.ts
_prism/: session-notes.md  status.yaml  tasks.md
docs/: Company_research_prompt.md  Debug panel.txt  Example_tell_me_about_myself_and_QA_prompt.md  SDLC_BEST_PRACTICES.md  enhancements_to_make.md
scripts/: build-installer.py  test_installer_config.py
sidecar/: .env.livekit.example  .gitignore  conftest.py  list_devices.py  requirements.txt  sidecar.spec  test_semantic_integration.py
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: sidecar-server-x86_64-pc-windows-msvc.cmd
src-tauri/src/: lib.rs
src-tauri/src/commands/: config.rs  mod.rs  sidecar.rs  window.rs
src-tauri/src/utils/: keyring.rs  mod.rs  platform.rs  storage_fallback.rs
(+363 files in other folders)
