[package]
name = "live-interview-agent"
version = "0.1.0"
description = "AI-powered live interview assistant that provides real-time contextual answers"
authors = ["Live Interview Agent Team"]
license = "MIT"
repository = "https://github.com/liveinterviewagent/live-interview-agent"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
keyring = "3"
thiserror = "2"

[dev-dependencies]
serial_test = "3"

# Platform-specific dependencies for screen invisibility
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"
